--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -61,10 +61,17 @@ collections:
       name: "attributes"
       widget: "object"
       fields:
-        - { label: "Type", name: "type", widget: "select", options: ["banner"]}
+        - { label: "Type", name: "type", widget: "select", options: ["banner", "banner-with-button"]}
         - { label: "Title", name: "title", widget: "string"}
         - { label: "Body", name: "body", widget: "markdown"}
         - { label: "Image", name: "image", widget: "image", required: false}
+        - label: "Button"
+          name: "button"
+          widget: "object"
+          required: false
+          fields:
+          - { label: "Title", name: "title", widget: "string"}
+          - { label: "href", name: "href", widget: "string"}
   # -------------------
   # headerLinks collection
   # -------------------
